# 2D-Batch-Renderer

./: .gitignore  CMakeLists.txt  GenerateProject.bat  README.md
ArcEngine/: CMakeLists.txt
ArcEngine/src/: Arc.h
ArcEngine/src/Arc/Core/: Application.cpp  Application.h  EntryPoint.h  InputManager.cpp  InputManager.h  KeyCodes.h  Layer.h  Window.h
ArcEngine/src/Arc/ECS/: Components.h  Entity.cpp  Entity.h
ArcEngine/src/Arc/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
ArcEngine/src/Arc/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
ArcEngine/src/Arc/Scripting/: ScriptingEngine.cpp  ScriptingEngine.h
ArcEngine/src/Arc/UI/Engine/Base/: UIComponent.cpp  UIComponent.h
ArcEngine/src/Arc/UI/Engine/UI/: Panel.cpp  Panel.h
ArcEngine/src/Platform/MacOSX/Metal/: ArcEngine-Bridging-Header.h  CreateShader.sh  MetalBuffer.h  MetalBuffer.mm  MetalBuffer.swift  MetalGraphicsContext.h  MetalGraphicsContext.mm  MetalRenderAPI.h  MetalRenderAPI.mm  MetalRenderApi.swift  MetalShader.h  MetalShader.mm  MetalShader.swift  MetalTexture.h  MetalTexture.mm  MetalTexture.swift  MetalVertexArray.h  MetalVertexArray.mm  MetalVertexArray.swift  Shaders.air  Shaders.metal  Shaders.metallib  textureShader.air  textureShader.metal  textureShader.metallib
ArcEngine/src/Platform/MacOSX/Window/: CocoaWindow.h  CocoaWindow.mm  CocoaWindow.swift
ArcEngine/src/Platform/Windows/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
ArcEngine/src/Platform/Windows/Window/: OpenGLWindow.cpp  OpenGLWindow.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Editor.cpp  Editor.h  main.cpp
Sandbox/src/Assets/: Basic.shader  FirstScene.arcsf  FirstScene.json  SecondScene.arcsf  textureShader.shader
